sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/IRR_Standalone_Icoupon_Voucher__mdt.object-meta.xml
<CustomObject>
    <label>Standalone ICoupon Voucher</label>
    <pluralLabel>Standalone ICoupon Vouchers</pluralLabel>
</CustomObject>