sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/fields/IRR_Airport_List__c.field-meta.xml
<CustomField>
    <fullName>IRR_Airport_List__c</fullName>
    <label>IRR_Airport_List</label>
    <type>TextArea</type>
</CustomField>