sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/fields/IRR_Reason__c.field-meta.xml
<CustomField>
    <fullName>IRR_Reason__c</fullName>
    <label>IRR_Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>