sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/fields/IRR_Voucher_Currency__c.field-meta.xml
<CustomField>
    <fullName>IRR_Voucher_Currency__c</fullName>
    <label>IRR_Voucher_Currency</label>
    <length>28</length>
    <type>Text</type>
</CustomField>