sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/fields/IRR_Voucher_Profile__c.field-meta.xml
<CustomField>
    <fullName>IRR_Voucher_Profile__c</fullName>
    <label>IRR_Voucher_Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>