sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher</fullName>
                <default>true</default>
                <label>Voucher</label>
            </value>
            <value>
                <fullName>Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>