sas-core/main/default/objects/IRR_Standalone_Icoupon_Voucher__mdt/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <description>This is the voucher or reason ID to be sent to ICoupon</description>
    <label>UniqueID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>